After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 639226 - [asfdemux] Doesn't handle new PlayReady DRM files
[asfdemux] Doesn't handle new PlayReady DRM files
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-ugly
git master
Other Linux
: Normal major
: 0.10.17
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-01-11 16:12 UTC by Edward Hervey
Modified: 2011-01-11 16:53 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
asfdemux: Handle new type of DRM'd asf files. (2.04 KB, patch)
2011-01-11 16:13 UTC, Edward Hervey
committed Details | Review

Description Edward Hervey 2011-01-11 16:12:44 UTC
There seems to be a new type of DRM'd asf file we don't properly recognize, ending up with weird stream error being posted as opposed to the well know "this file is encrypted" error message.
Comment 1 Edward Hervey 2011-01-11 16:13:10 UTC
Created attachment 178058 [details] [review]
asfdemux: Handle new type of DRM'd asf files.
Comment 2 Edward Hervey 2011-01-11 16:15:48 UTC
the new type seems to be from the "PlayReady" technology (sic):

https://www.microsoft.com/playready/default.mspx
Comment 3 Tim-Philipp Müller 2011-01-11 16:29:08 UTC
Comment on attachment 178058 [details] [review]
asfdemux: Handle new type of DRM'd asf files.

That seems safe to put into the next pre-release
Comment 4 Edward Hervey 2011-01-11 16:53:23 UTC
commit 6eb48af87c31ce3243d305aaf739d8442113c5eb
Author: Edward Hervey <edward.hervey@collabora.co.uk>
Date:   Tue Jan 11 17:09:02 2011 +0100

    asfdemux: Handle new type of DRM'd asf files.
    
    These are produced by the new MS PlayReady system.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=639226